--- a/API/API.csproj
+++ b/API/API.csproj
@@ -10,6 +10,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.13" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.6.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.14" />
+
   </ItemGroup>
 
 </Project>
